--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -9,15 +9,56 @@
   <meta name="author" content="Zach Bush">
   <link rel="stylesheet"  type="text/css" src="/css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
   <style>
     * { text-align: center;
         justify-content: center;
         font-family: 'Inconsolata', monospace;}
+    #mapid { height: 180px; }
   </style>
 </head>
 
 <body>
   INSERT MAP HERE
+  <div id="mapid">
+
+    <script>
+        // Create a variable to hold our map
+        let myMap;
+        // Create a variable to hold our canvas
+        let canvas;
+        // Create a new Mappa instance using Leaflet.
+        const mappa = new Mappa('Leaflet');
+        var locations = [{"lat": 36.63257106196329,"long": -87.40877951849383},{"lat": 36.6329996329,"long": -87.408745483},{"lat": 36.63249,"long": -87.14}]; //to Hold Locations
+        const options = {
+            lat: 0,
+            lng: 0,
+            zoom: 4,
+            style: "http://{s}.tile.osm.org/{z}/{x}/{y}.png"
+        }
+        function drawPoint(){
+            clear();
+            locations.forEach(element => {
+                console.log(element),
+                place = myMap.latLngToPixel(element.lat, element.long),
+                ellipse(place.x, place.y, 20, 20)
+            }) 
+        }
+        // p5.js setup
+        function setup(){
+            canvas = createCanvas(640,640); 
+            myMap = mappa.tileMap(options);   
+            myMap.overlay(canvas);
+            myMap.onChange(drawPoint)
+        }
+
+        // p5.js draw
+        function draw(){
+        }
+
+
+    </script>    
 </body>
 </html>
