--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -25,36 +25,37 @@
   <div id="mapid">
 
     <script>
-        // Create a variable to hold our map
         let myMap;
-        // Create a variable to hold our canvas
         let canvas;
-        // Create a new Mappa instance using Leaflet.
         const mappa = new Mappa('Leaflet');
+        
         var locations = [{"lat": 36.63257106196329,"long": -87.40877951849383},{"lat": 36.6329996329,"long": -87.408745483},{"lat": 36.63249,"long": -87.14}]; //to Hold Locations
+        
+        async function  getLocations(){
+            const response = await fetch("https://zach-location.herokuapp.com/api/v1/locations");
+            const json = await response.json();
+            console.log("json: "+json);
+        }
         const options = {
             lat: 0,
             lng: 0,
             zoom: 4,
-            style: "http://{s}.tile.osm.org/{z}/{x}/{y}.png"
+            style: "https://{s}.tile.osm.org/{z}/{x}/{y}.png"
         }
         function drawPoint(){
             clear();
             locations.forEach(element => {
-                console.log(element),
+                console.log("Element: "+element),
                 place = myMap.latLngToPixel(element.lat, element.long),
                 ellipse(place.x, place.y, 20, 20)
             }) 
         }
-        // p5.js setup
         function setup(){
             canvas = createCanvas(640,640); 
             myMap = mappa.tileMap(options);   
             myMap.overlay(canvas);
             myMap.onChange(drawPoint)
         }
-
-        // p5.js draw
         function draw(){
         }
 
