--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -31,9 +31,9 @@
         
         var locations = [{"lat": 36.63257106196329,"long": -87.40877951849383},{"lat": 36.6329996329,"long": -87.408745483},{"lat": 36.63249,"long": -87.14}]; //to Hold Locations
         
-        async function  getLocations(){
-            const response = await fetch("https://zach-location.herokuapp.com/api/v1/locations");
-            const json = await response.json();
+        function  getLocations(){
+            const response = fetch("https://zach-location.herokuapp.com/api/v1/locations");
+            const json = response.json();
             console.log("json: "+json);
             return json;
         }
