--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -32,10 +32,11 @@
         var locations = [{"lat": 36.63257106196329,"long": -87.40877951849383},{"lat": 36.6329996329,"long": -87.408745483},{"lat": 36.63249,"long": -87.14}]; //to Hold Locations
         
         function  getLocations(){
-            const response = fetch("https://zach-location.herokuapp.com/api/v1/locations")
+            const response = await fetch("https://zach-location.herokuapp.com/api/v1/locations")
             .then(res => res.json())
             .then(json => {
-                console.log(json[0]);
+                console.log("Json Spot 0" + json[0]);
+                console.log("json spot 1" + json[1]);
                 return json;
             })
         }
