--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -29,7 +29,8 @@
         let canvas;
         const mappa = new Mappa('Leaflet');
         
-        var locations = [{"lat": 36.63257106196329,"long": -87.40877951849383},{"lat": 36.6329996329,"long": -87.408745483},{"lat": 36.63249,"long": -87.14}]; //to Hold Locations
+        //{"lat": 36.63257106196329,"long": -87.40877951849383},{"lat": 36.6329996329,"long": -87.408745483},{"lat": 36.63249,"long": -87.14}
+        var locations = []; //to Hold Locations
         
         function  getLocations(){
             const response = fetch("https://zach-location.herokuapp.com/api/v1/locations")
