--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Weather App</title>
+  <title>My Location</title>
   <meta name="description" content="My Location">
   <meta name="author" content="Zach Bush">
   <link rel="stylesheet"  type="text/css" src="/css/styles.css">
@@ -72,7 +72,6 @@
         }
         function draw(){
         }
-
         getLocations();
     </script>    
 </body>
