--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -24,7 +24,7 @@
   INSERT MAP HERE
   <div id="CONTACT">
     Text me: [[LOCATION]] to my cell phone number and my location will update!
-    <a href="sms:1-408-555-1212">New SMS Message</a>
+    <a href="sms:8178768831">New SMS Message</a>
   </div
   <div id="mapid">
 
