--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -23,7 +23,7 @@
 <body>
   INSERT MAP HERE
   <div id="CONTACT">
-    Text me: [[LOCATION]] to my cell phone number and my location will update!
+    Text me: " [[LOCATION]] " to my cell phone number and my location will update!
     <a href="sms:8178768831">New SMS Message</a>
   </div
   <div id="mapid">
