--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -17,6 +17,7 @@
         justify-content: center;
         font-family: 'Inconsolata', monospace;}
     #mapid { height: 180px; }
+    #CONTACT {height: 180px; }
   </style>
 </head>
 
