--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -54,8 +54,8 @@
             })
         }
         const options = {
-            lat: 0,
-            lng: 0,
+            lat: 36.63370803623742,
+            lng: -87.42799207454642,
             zoom: 4,
             style: "https://{s}.tile.osm.org/{z}/{x}/{y}.png"
         }
