--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -42,8 +42,8 @@
             .then(json => {
                 for(x in json){
                     //console.log(json[x]);
-                    console.log(json[x].Lat);
-                    console.log(json[x].Long);
+                    //console.log(json[x].Lat);
+                    console.log(json[x]);
                     const newLocation = {
                         "Lat": json[x].Lat,
                         "Long": json[x].Long
