Trying other onClick stuff

--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -65,7 +65,7 @@
         function drawPoint(){
             clear();
             locations.forEach(element => {
-                place = myMap.latLngToPixel(element.Lat, element.Long).onClick('click', function() {
+                place = myMap.latLngToPixel(element.Lat, element.Long).on('click', function() {
                     alert("test");
                 }),
                 ellipse(place.x, place.y, 20, 20)
