--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -65,9 +65,7 @@
         function drawPoint(){
             clear();
             locations.forEach(element => {
-                place = myMap.latLngToPixel(element.Lat, element.Long).on('click', function() {
-                    alert("test");
-                }),
+                place = myMap.latLngToPixel(element.Lat, element.Long),
                 ellipse(place.x, place.y, 20, 20)
             }) 
         }
