--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -15,16 +15,23 @@
   <style>
     * { text-align: center;
         justify-content: center;
-        font-family: 'Inconsolata', monospace;}
+        font-family: 'Inconsolata', monospace;
+        background-color: rgba(0, 0, 0, 0)}
+    #CONTACT{font-size: 18px;
+              color: #b62323;
+              text-decoration: none;
+              font-weight: bold;
+              background-color: rgba(0, 0, 0, 0); /* Color white with alpha 0.9*/}
 
   </style>
 </head>
 
 <body>
-  <div id="CONTACT">
-    <a href="sms:8178768831">New SMS Message</a>
-  </div>
+
   <div id="mapid">
+    <title id="CONTACT">
+        UPDATE LIVE!
+    </title>
     <script>
         let myMap;
         let canvas;
@@ -56,25 +63,29 @@
         }
         const options = {
             lat: 36,
-            lng: -87,
-            zoom: 7,
+            lng: -86,
+            zoom: 6
+            ,
             style: "https://{s}.tile.osm.org/{z}/{x}/{y}.png"
         }
         function drawPoint(){
             clear();
             locations.forEach(element => {
-                place = myMap.latLngToPixel(element.Lat, element.Long, element.Timestamp),
-                ellipse(place.x, place.y, 20, 20)
+                //place = myMap.latLngToPixel(element.Lat, element.Long, element.Timestamp);
+                //eL = ellipse(place.x, place.y, 20, 20);
+                var marker = L.marker([element.Lat, element.Long]).addTo(myMap.map);
+                marker.bindPopup(element.Timestamp);
             }) 
         }
         function setup(){
             canvas = createCanvas(displayWidth, displayHeight); 
             myMap = mappa.tileMap(options);   
             myMap.overlay(canvas);
-            myMap.onChange(drawPoint)
+            myMap.onChange(drawPoint);
         }
         function draw(){
         }
+        
         getLocations();
     </script>    
 </body>
