--- a/landing-pages/index.html
+++ b/landing-pages/index.html
@@ -22,6 +22,10 @@
               text-decoration: none;
               font-weight: bold;
               background-color: rgba(0, 0, 0, 0); /* Color white with alpha 0.9*/}
+    #mapid {
+      width: 100%;
+      height: 100%;
+    }
 
   </style>
 </head>
@@ -71,10 +75,8 @@
         function drawPoint(){
             clear();
             locations.forEach(element => {
-                //place = myMap.latLngToPixel(element.Lat, element.Long, element.Timestamp);
-                //eL = ellipse(place.x, place.y, 20, 20);
                 var marker = L.marker([element.Lat, element.Long]).addTo(myMap.map);
-                marker.bindPopup(element.Timestamp);
+                marker.bindPopup(element.Timestamp).openPopup();
             }) 
         }
         function setup(){
